docs: Add API definition for checkout route
