# checkout/handlers.go
@@ -41,6 +41,14 @@ func (svc *Service) GetProductDiscount(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
+// @summary Calculate Checkout
+// @description Calculate Checkout for cart of products
+// @accept json
+// @produce json
+// @param cart body CheckoutRequest true "Cart of products"
+// @success 200 {object} CheckoutResponse
+// @failure 400 {object} HTTPError
+// @router /checkout [post]
 func (svc *Service) PostCheckout(c echo.Context) error {
 	ctx := c.Request().Context()
 
